spring/2.0/modules/ROOT/pages/spring-module-reference.adoc
= Spring Module 2.0 Reference 

Spring Module enables Mule apps to use the Spring framework.

== Configurations
---

[[config]]
=== Config
Spring configuration that enables you to define a set of spring XML files and create an application context with objects to use in the Mule artifact.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Files a| String | The Spring beans file. |  | x
| Name a| String |  The identifier of this element used to reference it in other components. |  | x
|===

== Operations

[[authorization-filter]]
=== Authorization Filter

`<spring:authorization-filter>`

Authorizes users against a required set of authorities.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Required Authorities a| String | The authorities that grants the user further access to the flow, for example, `ROLE_ADMIN`,`ROLE_USER`. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
|===

==== Throws

* MULE:NOT_PERMITTED
* MULE:SERVER_SECURITY

== Types


[[ErrorMapping]]
=== Error Mapping

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | Source of the error. |  | 
| Target a| String | Target of the error. |  | x
|======================

[[DelegateSecurityProvider]]

=== Delegate Security Provider

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Provider name to reference. |  | x
| Delegate Ref a| String | Spring security manager. |  | x
| Authentication Provider Ref a| String | Authentication provider. |  | x
|===

== See Also

* https://help.salesforce.com[Salesforce Help]
